crates/squawk_linter/src/rules/snapshots/squawk_linter__rules__ban_char_field__test__alter_table_err.snap
---
source: crates/squawk_linter/src/rules/ban_char_field.rs
expression: errors
---
[
    Violation {
        code: BanCharField,
        message: "Using `character` is likey a mistake and should almost always be replaced by `text` or `varchar`.",
        text_range: 28..32,
        messages: [],
    },
]
