crates/squawk_linter/src/rules/snapshots/squawk_linter__rules__ban_char_field__test__array_char_type_err.snap
---
source: crates/squawk_linter/src/rules/ban_char_field.rs
expression: "lint_errors(sql, Rule::BanCharField)"
---
error[BanCharField]: Using `character` is likely a mistake and should almost always be replaced by `text` or `varchar`.
  ╭▸ 
3 │   a char[]
  │     ━━━━
  ╭╴
3 -   a char[]
3 +   a text[]
  ╰╴
